<resources>
    <string name="app_name">A-OK</string>
    <string name="nothing"></string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">p6Nr79cQowSNpuHf4QSHzQQVARSHwNwFkaYWRnd5</string>
    <string name="back4app_client_key">yf2wVVYmI6UWHN2oNKK3Xc8A13pHPlI0aimCzQpi</string>
    <string name="terms">By using this app, you agree to our terms and conditions. You can read the full terms and conditions in the profile setting page.</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset">Reset</string>
    <string name="welcome_to_a_ok">Welcome to A-OK!</string>
    <string name="find_a_surgery">Find a procedure</string>
    <string name="help">HELP</string>
    <string name="profile">PROFILE</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="reminders">Reminders</string>
    <string name="medications">Medications</string>
    <string name="amount_in_mg">Amount in mg or number of tablets</string>
    <string name="frequency_of_dosage">Frequency of Dosage</string>
    <string name="double_tap_on_bar_to_clear_times">Double tap on bar to clear times</string>
    <string name="save">Save</string>
    <string name="add_medication">Add Medication</string>
    <string name="select_a_surgery_from_the_list_below_to_begin_tracking_your_surgery">Select a surgery from the list below to begin tracking your surgery</string>
    <string name="surgeries">Surgeries</string>
    <string name="select_surgery">Select Surgery</string>
    <string name="choose_surgery_date">Choose Surgery Date</string>
    <string name="if_you_haven_t_decided_on_a_date_yet_click_skip_you_can_come_back_to_this_later">If you haven\'t decided on a date yet, click skip. You can come back to this later.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="current_surgery">Current Surgery</string>
    <string name="today_s_tasks">Today\'s Tasks</string>
    <string name="surgery_info">Surgery Info</string>
    <string name="journals">Journals</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="journla_entry">Journla Entry</string>
    <string name="current_pain_level">Current pain level:</string>
    <string name="photos">Photos</string>
    <string name="add_joural_entry">Add Joural Entry</string>
    <string name="my_profile">My Profile:</string>
    <string name="others">Other:</string>
    <string name="surgeries_">Surgeries:</string>
    <string name="remove_surgery">Remove Surgery</string>
    <string name="change_current_surgery">Change Current Surgery</string>
    <string name="add_new_surgery">Add New Surgery</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="journal_etry">Journal Entry</string>
    <string name="reminder_details">Reminder Details</string>
    <string name="image">Image</string>
    <string name="change_surgery_date">Change Surgery Date</string>
    <string name="hospital_stay">Hospital Stay</string>
    <string name="doctors_appointment">Doctors Appointment</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="rating_your_primary_doctor">Rating Your Primary Doctor</string>
    <string name="pre_registration_process">Pre Registration Process</string>
    <string name="hospital_stay_survey">Hospital Stay Survey</string>
    <string name="overall_doctor_visit">Overall Doctor Visit</string>
    <string name="enter_here">Enter here</string>
    <string name="nurse">Nurse</string>
    <string name="tech">Tech</string>
    <string name="stuff_responsiveness">Stuff Responsiveness</string>
    <string name="kindness">Kindness</string>
    <string name="professionalism">Professionalism</string>
    <string name="knowledge">Knowledge</string>
    <string name="attitude">Attitude</string>
    <string name="submit">Submit</string>
    <string name="scheduling_ease">Scheduling Ease</string>
    <string name="accessibility">Accessibility</string>
    <string name="doctor_survey">Doctor Survey</string>
    <string name="_1_month_before_surgery">1 Month Before Surgery</string>
    <string name="surgery_scheduler_information">Surgery Scheduler Information</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="enter_number_here">Enter number here</string>
    <string name="completed_call_with_the_surgery_scheduler">Completed call with the surgery scheduler</string>
    <string name="have_you_finalized_a_date_for_surgery">Have you finalized a date for surgery?</string>
    <string name="have_you_scheduled_a_visit_with_your_pcp">Have you scheduled a visit with your PCP?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_1_week_before_surgery">1 Week Before Surgery</string>
    <string name="hospital_information">Hospital Information</string>
    <string name="enter_preegistraion_number_here">Enter preegistraion number here</string>
    <string name="pre_op_approval_from_pcp_cardiologist">Pre-op approval from PCP cardiologist</string>
    <string name="pcp_information">PCP Information</string>
    <string name="have_you_found_a_place_to_stay_before_after_your_surgery">Have you found a place to stay before/after your surgery?</string>
    <string name="_1_day_before_surgery">1 Day Before Surgery</string>
    <string name="do_not_eat_or_drink_anything_after_midnight">Do not eat or drink anything after midnight</string>
    <string name="drink_lots_of_fluids">Drink lots of fluids</string>
    <string name="eat_a_light_meal">Eat a light meal</string>
    <string name="_1_week_after_surgery">1 Week After Surgery</string>
    <string name="_3_week_after_surgery">3 Weeks After Surgery</string>
    <string name="_6_week_after_surgery">6 Weeks After Surgery</string>
    <string name="_3_month_after_surgery">3 Months After Surgery</string>
    <string name="_6_month_after_surgery">6 Months After Surgery</string>
    <string name="have_you_checked_in_with_your_docter_about_your_procedure">Have you checked in with your docter about your procedure?</string>
    <string name="have_you_been_following_your_post_op_directions_as_suggested_by_your_doctor">Have you been following your post-op directions as suggested by your doctor?</string>
    <string name="_2_weeks_after_surgery">2 Weeks After Surgery</string>
    <string name="have_you_scheduled_your_first_post_op_visit_with_your_doctor">Have you scheduled your first post-op visit with your doctor?</string>
    <string name="_1_month_after_surgery">1 Month After Surgery</string>
    <string name="have_you_had_your_first_post_op_appointment">Have you had your first post-op appointment?</string>
    <string name="have_you_scheduled_your_post_op_xray_ct_mri">Have you scheduled your post op Xray/CT/MRI?</string>
    <string name="did_your_surgeon_send_email_the_order_to_the_imaging_facility">Did your surgeon send/email the order to the imaging facility?</string>
    <string name="do_you_have_the_image_facility_address">Do you have the image facility address?</string>
    <string name="enter_date">Enter date</string>
    <string name="new_numbness">New Numbness</string>
    <string name="infection">Infection</string>
    <string name="spinal_fluid_leak">Spinal Fluid Leak</string>
    <string name="spinal_fluid_leak_requiring_further_surgery">Spinal fluid leak requiring further surgery</string>
    <string name="new_weakness">New Weakness</string>
    <string name="new_balance_problems">New Balance Problems</string>
    <string name="new_bladder_incontinence">New Bladder Incontinence</string>
    <string name="new_bowel_incontinence">New Bowel Incontinence</string>
    <string name="paralysis">Paralysis</string>
    <string name="bladder_infection">Bladder Infection</string>
    <string name="pneumonia">Pneumonia</string>
    <string name="heart_attack">Heart attack</string>
    <string name="stroke">Stroke</string>
    <string name="blood_clot_in_leg_or_legs">Blood clot in leg or legs</string>
    <string name="worse_pain_after_surgery_in_new_or_different_location_not_surgical_soft_tissue_pain">Worse pain after surgery in new or different location (not surgical soft tissue pain)</string>
    <string name="needing_a_subsequent_fusion">Needing a subsequent fusion</string>
    <string name="recurrent_or_new_disc_herniation">Recurrent or new disc herniation</string>
    <string name="failure_to_fuse_on_x_ray_or_ct_scan">Failure to fuse on X-ray or CT scan</string>
    <string name="screw_or_hardware_loosening">Screw or hardware loosening</string>
    <string name="broken_screw_s_or_rod_s">Broken screw(s), or rod(s)</string>
    <string name="hoarse_voice">Hoarse voice</string>
    <string name="broken_plate_or_screws">Broken plate or screws</string>
    <string name="difficulty_swallowing">Difficulty swallowing</string>
    <string name="enter_address_here">Enter address here</string>
    <string name="schedule_an_appointment_with_your_doctor">Schedule an appointment with your doctor</string>
    <string name="if_you_were_told_to_get_post_op_imaging_done_schedule_that">If you were told to get post-op imaging done, schedule that</string>
    <string name="confirm_with_surgeon_s_office_that_they_have_sent_over_imaging_order">Confirm with surgeon’s office that they have sent over imaging order</string>

</resources>
