<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/view_profile"
        android:layout_below="@id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true">

            <com.landonferrier.healthcareapp.views.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:font_style="bold"
                android:text="@string/name"
                android:textColor="@color/colorText"
                android:textSize="16sp"/>

            <com.landonferrier.healthcareapp.views.CustomFontTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:font_style="bold"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imv_profile_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_phone"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="36dp"
            android:clickable="true"
            android:focusable="true"/>
        <com.landonferrier.healthcareapp.views.CircleImageView
            android:id="@+id/imv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_phone"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="36dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="0dp"
            android:clickable="true"
            android:focusable="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider"
        android:layout_below="@id/view_profile"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/view_profile"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp">


        <com.landonferrier.healthcareapp.views.CustomFontTextView
            android:id="@+id/btn_privacy_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:font_style="bold"
            android:text="@string/privacy_settings"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:clickable="true"
            android:focusable="true"/>

        <com.landonferrier.healthcareapp.views.CustomFontTextView
            android:id="@+id/btn_terms_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:font_style="bold"
            android:text="@string/terms_of_service"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="16dp"/>


    </LinearLayout>
    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_action_bar"/>
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:scaleType="center"
            android:src="@drawable/arrowhead_thin_outline_to_the_left"
            android:tint="@color/colorWhite"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:focusable="true"/>

        <com.landonferrier.healthcareapp.views.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite"
            app:font_style="bold"
            android:textSize="18sp"
            android:text="@string/profile"/>

        <com.landonferrier.healthcareapp.views.CustomFontTextView
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorWhite"
            app:font_style="bold"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:text="@string/logout"
            android:layout_marginEnd="16dp"/>

    </RelativeLayout>

</RelativeLayout>